# darksea

./: .gitmodules  README.md
darksea-benchmarks/: readme.md
decompile-bin/cfg/: PotentialMinimizeSEVPABug_gccO0.cfg  cav2015-inverted_gccO0.cfg  cav2015_gccO0.cfg  rers-test-inlined_gccO0.cfg  rers-test-inlined_withtmp_gccO0.cfg  rers-test_gccO0.cfg  simple-1_gccO0.cfg  simple-2_gccO0.cfg  simple3_gccO0.cfg  someNonterminating_gccO0.cfg  trivial-1.cfg  trivial-1_gccO0.cfg  trivial-2_gccO0.cfg  trivial-3_gccO0.cfg
decompile-bin/dpredicates/: acqrel  acqrel.bc  acqrel.cfg  acqrel.ll  apache  apache.bc  apache.cfg  apache.ll  exsec2  exsec2.bc  exsec2.cfg  exsec2.ll  fig8-2007  fig8-2007.bc  fig8-2007.cfg  fig8-2007.ll  pgarch  pgarch.bc  pgarch.cfg  pgarch.ll  pgdropbuf  pgdropbuf.bc  pgdropbuf.cfg  pgdropbuf.ll  pgstream  pgstream.cfg  pgstream.ll  pgstreambug  pgstreambug.bc  pgstreambug.cfg  pgstreambug.ll  toylin1  toylin1.bc  toylin1.cfg  toylin1.ll  toylin2  toylin2.bc  toylin2.cfg  toylin2.ll  win1  (+38 more)
decompile-bin/ltl-toy/: 03-toyacquirerelease_true-valid-ltl  togglecounter_true-valid-ltl
decompile-bin/simple/: 01-exsec2_true-valid-ltl  cav2015_gccO0  (+14 more)
docker/: Dockerfile
run/: ABI_libc.bc  added_ctpop.txt  added_main.txt  darksea.sh  darksea.sh~  globalState.txt  install_darksea.sh  run_solver_compare.sh  slice-all.sh  slice-ltl.sh  trim.sh
src/: proof-bwb.py
src/llvm-pass/debloat/: CMakeLists.txt  DebloatPass.cc  DebloatPass.h  debloat.py  debloat_delete.py
src/llvm-pass/simplify/: CMakeLists.txt  Simplify.cc  Simplify.h
ultimate-bwb/: Ultimate.py
(+554 files in other folders)
